--- a/1st Landing Page - HTML , CSS/style.css
+++ b/1st Landing Page - HTML , CSS/style.css
@@ -20,14 +20,16 @@ body {
 }
 
 #main img {
-  height: 550px;
+  height: 600px;
+    width: 440px;
   position: relative;
   z-index: 99;
+  object-fit: cover;
 }
 
 #scroll-div {
   position: absolute;
-  top: 20%;
+  top: 24%;
   width: 100%;
   /* height: 100px; */
   white-space: nowrap;
@@ -46,11 +48,15 @@ body {
   margin-right: 50px;
   letter-spacing: 20px;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  animation: scroll;
+  animation-duration: 1.5s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
 }
 
 #scroll-div2 {
   position: absolute;
-  top: 40%;
+  top: 44%;
   width: 100%;
   z-index: 100;
   /* height: 100px; */
@@ -73,11 +79,15 @@ body {
   font-family: fantasy;
   -webkit-text-stroke-width: 0.1px;
   -webkit-text-stroke-color: #000;
+    animation: scroll;
+  animation-duration: 1s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
 }
 
 #scroll-div3 {
   position: absolute;
-  top: 60%;
+  top: 64%;
   width: 100%;
   /* height: 100px; */
   white-space: nowrap;
@@ -96,4 +106,31 @@ body {
   margin-right: 50px;
   letter-spacing: 20px;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+    animation: scroll;
+  animation-duration: 1.5s;
+  animation-direction: reverse;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+#text {
+  font-size: 30px;
+  font-weight: 800;
+  position: absolute;
+  font-family: Arial, Helvetica, sans-serif;
+  width: 60%;
+  /* background-color: red; */
+  z-index: 990;
+  top: 12%;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+@keyframes scroll{
+    0%{
+        transform: translate(calc(-100% - 52px));
+    }
+    100%{
+              transform: translate(0);
+    }
 }
