--- a/2nd Landing Page/style.css
+++ b/2nd Landing Page/style.css
@@ -21,11 +21,10 @@ html, body {
     width: 100%;
     height: 100px;
     /* background: red; */
-    border-bottom: 2px solid #dadada;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 3vw;
+    padding: 4vw;
 }
 
 .nav-part2{
@@ -35,12 +34,23 @@ html, body {
 }
 
 .nav h2{
-    font-size: 2vw;
+    font-size: 1.8vw;
     font-weight: 700;
 }
 
 .nav h4{
+    font-size: 1.1vw;
+}
+
+.nav button{
     font-size: 1vw;
+    padding: 0.7vw 1.4vw;
+    background-color: lightseagreen;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    font-weight: 700;
+    cursor: pointer;
 }
 
 .nav i{
@@ -48,10 +58,60 @@ html, body {
     display: none;
 }
 
+.content{
+    height: calc(100% - 200px);
+    width: 100%;
+    display: flex;
+    position: relative;
+}
+
+.left{
+    height: 100%;
+    width: 55%;
+    padding: 5vw 5vw;
+}
+
+.left h1{
+    font-size: 4vw;
+    line-height: 4.4vw;
+}
+
+.left h1 span{
+    color: lightseagreen;
+}
+
+.left p{
+    font-size: 1.2vw;
+    font-weight: 600;
+    color: #666;
+    width: 80%;
+    margin-top: 1.5vw;
+    margin-bottom: 3vw;
+}
+
+.content button{
+    font-size: 1.2vw;
+    padding: 1.3vw 2.3vw;
+    background-color: lightseagreen;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    font-weight: 700;
+    cursor: pointer;
+}
+
+.right{
+    height: 100%;
+    width: 45%;
+}
+
+.right img{
+    height: 70%;
+    width: 95%;
+}
+
 @media (max-width: 600px) {
     .nav{
-        background-color: lightgreen;
-        color: #fff;
         padding : 0 6vw;
         height: 60px;
     }
