--- a/2nd Landing Page/style.css
+++ b/2nd Landing Page/style.css
@@ -1,133 +1,180 @@
-
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
-html, body {
-    width: 100%;
-    height: 100%;
+html,
+body {
+  width: 100%;
+  height: 100%;
 }
 
-.main{
-    height: 100%;
-    width: 100%;
-
+.main {
+  height: 100%;
+  width: 100%;
 }
 
 .nav {
-    width: 100%;
-    height: 100px;
-    /* background: red; */
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 4vw;
+  width: 100%;
+  height: 100px;
+  /* background: red; */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 4vw;
 }
 
-.nav-part2{
-    display: flex;
-    align-items: center;
-    gap: 4vw;
+.nav-part2 {
+  display: flex;
+  align-items: center;
+  gap: 4vw;
 }
 
-.nav h2{
-    font-size: 1.8vw;
-    font-weight: 700;
+.nav h2 {
+  font-size: 1.8vw;
+  font-weight: 700;
 }
 
-.nav h4{
-    font-size: 1.1vw;
+.nav h4 {
+  font-size: 1.1vw;
 }
 
-.nav button{
-    font-size: 1vw;
-    padding: 0.7vw 1.4vw;
-    background-color: lightseagreen;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    font-weight: 700;
-    cursor: pointer;
+.nav button {
+  font-size: 1vw;
+  padding: 0.7vw 1.4vw;
+  background-color: lightseagreen;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  font-weight: 700;
+  cursor: pointer;
 }
 
-.nav i{
-    font-weight: 800;
-    display: none;
+.nav i {
+  font-weight: 800;
+  display: none;
 }
 
-.content{
-    height: calc(100% - 200px);
-    width: 100%;
-    display: flex;
-    position: relative;
+.content {
+  height: calc(100% - 200px);
+  width: 100%;
+  display: flex;
+  position: relative;
 }
 
-.left{
-    height: 100%;
-    width: 55%;
-    padding: 5vw 5vw;
+.left {
+  height: 100%;
+  width: 55%;
+  padding: 5vw 5vw;
 }
 
-.left h1{
-    font-size: 4vw;
-    line-height: 4.4vw;
+.left h1 {
+  font-size: 4vw;
+  line-height: 4.4vw;
 }
 
-.left h1 span{
-    color: lightseagreen;
+.left h1 span {
+  color: lightseagreen;
 }
 
-.left p{
-    font-size: 1.2vw;
-    font-weight: 600;
-    color: #666;
-    width: 80%;
-    margin-top: 1.5vw;
-    margin-bottom: 3vw;
+.left p {
+  font-size: 1.2vw;
+  font-weight: 600;
+  color: #666;
+  width: 80%;
+  margin-top: 1.5vw;
+  margin-bottom: 3vw;
 }
 
-.content button{
-    font-size: 1.2vw;
-    padding: 1.3vw 2.3vw;
-    background-color: lightseagreen;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    font-weight: 700;
-    cursor: pointer;
+.content button {
+  font-size: 1.2vw;
+  padding: 1.3vw 2.3vw;
+  background-color: lightseagreen;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  font-weight: 700;
+  cursor: pointer;
 }
 
-.right{
-    height: 100%;
-    width: 45%;
+.right {
+  height: 100%;
+  width: 45%;
 }
 
-.right img{
-    height: 70%;
+.right img {
+  height: 100%;
+  width: 95%;
+}
+
+@media (max-width: 1000) {
+  .right img {
+    height: 30%;
     width: 95%;
+  }
 }
 
 @media (max-width: 600px) {
-    .nav{
-        padding : 0 6vw;
-        height: 60px;
-    }
+  .nav {
+    padding: 0 6vw;
+    height: 60px;
+  }
 
-    .nav h2{
-        font-size: 5vw;
-    }
+  .nav h2 {
+    font-size: 5vw;
+  }
 
-    .nav h4{
-        font-size: 4vw;
-        display: none;
-    }
+  .nav h4 {
+    font-size: 4vw;
+    display: none;
+  }
 
-    .nav i{
-        display: block;
-        font-size: 6vw;
-    }
+  .nav button {
+    display: none;
+  }
 
+  .nav i {
+    display: block;
+    font-size: 6vw;
+  }
+
+  .content {
+    height: calc(100% - 60px);
+    flex-direction: column;
+  }
+
+  .left {
+    width: 100%;
+    height: 50%;
+    padding: 4vw 6vw;
+  }
+  .right {
+    width: 100%;
+    height: 40%;
+  }
+
+  .left h1 {
+    font-size: 10vw;
+    line-height: 11vw;
+  }
+
+  .left p {
+    font-size: 3vw;
+    width: 90%;
+    margin-top: 5vw;
+    margin-bottom: 6vw;
+  }
+
+  .right img {
+    height: 100%;
+    width: 100%;
+  }
+  .content button {
+    padding: 3vw 6vw;
+    border-radius: 3px;
+    font-weight: 600;
+    font-size: 3.5vw;
+  }
 }
