--- a/2nd Landing Page/style.css
+++ b/2nd Landing Page/style.css
@@ -18,7 +18,7 @@ body {
 
 .nav {
   width: 100%;
-  height: 100px;
+  height: 90px;
   /* background: red; */
   display: flex;
   align-items: center;
@@ -70,6 +70,10 @@ body {
 
 }
 
+#log-in{
+  background-color: rgb(17, 137, 131);
+}
+
 .content {
   height: calc(100% - 200px);
   width: 100%;
@@ -110,7 +114,7 @@ body {
   font-size: 1.2vw;
   padding: 1.3vw 2.3vw;
   background-color: lightseagreen;
-  color: #fff;
+  color: #ffffff;
   border: none;
   border-radius: 5px;
   font-weight: 700;
