--- a/3rd Coffee Landing Page/style.css
+++ b/3rd Coffee Landing Page/style.css
@@ -96,6 +96,11 @@ li a:hover{
     transform: translateY(60px);
 }
 
+button:hover{
+    background-color: #aa8349;
+    transition: 0.5s ease-in ease-out;
+}
+
 /* our story */
 #our-story{
     /* height: 100vh; */
