--- a/1st Landing Page - HTML , CSS/style.css
+++ b/1st Landing Page - HTML , CSS/style.css
@@ -12,7 +12,6 @@ body {
 #main {
   height: 100%;
   width: 100%;
-  /* background-color: #fff; */
   position: relative;
   display: flex;
   align-items: center;
@@ -21,7 +20,7 @@ body {
 
 #main img {
   height: 600px;
-    width: 440px;
+  width: 440px;
   position: relative;
   z-index: 99;
   object-fit: cover;
@@ -38,7 +37,7 @@ body {
 }
 
 #scroll-div::-webkit-scrollbar {
-  display: none; /* Hide scrollbar for Chrome, Safari and Opera */
+  display: none;
 }
 
 #scroll-div h1 {
@@ -59,7 +58,6 @@ body {
   top: 44%;
   width: 100%;
   z-index: 100;
-  /* height: 100px; */
   white-space: nowrap;
   overflow-x: auto;
   overflow-y: hidden;
@@ -79,7 +77,7 @@ body {
   font-family: fantasy;
   -webkit-text-stroke-width: 0.1px;
   -webkit-text-stroke-color: #000;
-    animation: scroll;
+  animation: scroll;
   animation-duration: 1s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
@@ -106,7 +104,7 @@ body {
   margin-right: 50px;
   letter-spacing: 20px;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-    animation: scroll;
+  animation: scroll;
   animation-duration: 1.5s;
   animation-direction: reverse;
   animation-timing-function: linear;
@@ -126,11 +124,11 @@ body {
   text-align: center;
 }
 
-@keyframes scroll{
-    0%{
-        transform: translate(calc(-100% - 52px));
-    }
-    100%{
-              transform: translate(0);
-    }
+@keyframes scroll {
+  0% {
+    transform: translate(calc(-100% - 52px));
+  }
+  100% {
+    transform: translate(0);
+  }
 }
