--- a/1st Landing Page - HTML , CSS/style.css
+++ b/1st Landing Page - HTML , CSS/style.css
@@ -30,7 +30,6 @@ body {
   position: absolute;
   top: 24%;
   width: 100%;
-  /* height: 100px; */
   white-space: nowrap;
   overflow-x: auto;
   overflow-y: hidden;
@@ -64,7 +63,7 @@ body {
 }
 
 #scroll-div2::-webkit-scrollbar {
-  display: none; /* Hide scrollbar for Chrome, Safari and Opera */
+  display: none; 
 }
 
 #scroll-div2 h1 {
@@ -87,14 +86,13 @@ body {
   position: absolute;
   top: 64%;
   width: 100%;
-  /* height: 100px; */
   white-space: nowrap;
   overflow-x: auto;
   overflow-y: hidden;
 }
 
 #scroll-div3::-webkit-scrollbar {
-  display: none; /* Hide scrollbar for Chrome, Safari and Opera */
+  display: none; 
 }
 
 #scroll-div3 h1 {
@@ -117,7 +115,7 @@ body {
   position: absolute;
   font-family: Arial, Helvetica, sans-serif;
   width: 60%;
-  /* background-color: red; */
+
   z-index: 990;
   top: 12%;
   text-transform: uppercase;
