--- a/Amazon clone/style.css
+++ b/Amazon clone/style.css
@@ -14,14 +14,14 @@
 }
 
 .nav-logo{
-    height: 40px;
-    width: 100px;
+    height: 58px;
+    width: 120px;
     /* padding-right: 8px; */
 }
 .logo{
     background-image: url(Assets/amazon_logo.png);
     background-size: cover;
-    height: 40px;
+    height: 58px;
     width: 100%;
 }
 .border{
@@ -56,7 +56,8 @@
     background-color: pink;
     width: 50vw;
     height: 40px;
-    border-radius: 4px;
+    border-radius: 8px;
+    border: 4px solid #0f1111;
 }
 
 .search-select{
@@ -86,7 +87,7 @@
 }
 
 .nav-search:hover{
-    border: 3px solid #febd68;
+    border: 4px solid #febd68;
 }
 
 
@@ -112,4 +113,92 @@ span{
 
 .nav-cart i{
     font-size: 30px;
+}
+
+/* panel section  */
+
+.panel{
+    height: 40px;
+    background-color: #222f3d;
+    display: flex;
+    color: white;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.panel-ops p{
+    display: inline;
+    margin-left: 15px;
+    cursor: pointer;
+}
+
+.panel-ops{
+    width: 80vw;
+    font-size: 0.9rem;
+}
+
+.panel-deals{
+    font-weight: 1rem;
+    font-weight: 700;
+}
+
+/* hero section  */
+
+.hero-section{
+    background-image: url(Assets/hero_image.jpg);
+    background-size: cover;
+    height: 350px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+.hero-msg{
+    height: 40px;
+    background-color: white;
+    color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.9rem;
+    width: 90%;
+    margin-bottom: 25px;
+}
+
+.hero-msg a{
+    color: #007185;
+    text-decoration: none;
+}
+
+/* shop section  */
+
+.shop-section{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    background-color: #e2e7e6;
+    /* margin-bottom: 20px; */
+
+}
+.box{
+    height: 400px;
+    /* border: 2px solid black; */
+    width: 23%;
+    background-color: white;
+    padding: 20px 0 15px;
+    margin-top: 20px;
+}
+
+.box-img{
+    height: 300px;
+    background-size: cover;
+    margin: 1rem 0;
+}
+
+.box-content{
+    margin: 0 1rem;
+}
+
+.shop-section p{
+    color: #007185;
 }
