Header section done

--- a/4th Complete Landing Page/style.css
+++ b/4th Complete Landing Page/style.css
@@ -139,3 +139,48 @@ ul{
     gap: 40px;
 }
 
+/* Header Section */
+
+header{
+    padding: 50px var(--padding-inline-section) 0;
+}
+
+.header-section{
+    justify-content: center;
+    gap: 50px;
+    padding-bottom: 20px;
+}
+
+.header-left{
+    max-width: 40vw;
+}
+
+.header-left h1{
+    margin-top: 20px;
+}
+
+.header-left a{
+    margin-top: 20px;
+}
+
+.header-right img{
+    width: 570px;
+}
+
+/* comapny header */
+
+.companies-header{
+    text-align: center;
+    margin-block: 30px;
+    color: var(--primary-text-color);
+}
+
+.logos{
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.logo{
+    height: 46px;
+}
+
