--- a/4th Complete Landing Page/style.css
+++ b/4th Complete Landing Page/style.css
@@ -169,6 +169,9 @@ header{
 
 /* comapny header */
 
+.companies-section{
+    padding-bottom: 30px;
+}
 .companies-header{
     text-align: center;
     margin-block: 30px;
