--- a/Amazon clone/style.css
+++ b/Amazon clone/style.css
@@ -54,7 +54,7 @@
     display: flex;
     justify-content: space-evenly;
     background-color: pink;
-    width: 50vw;
+    width: 60vw;
     height: 40px;
     border-radius: 8px;
     border: 4px solid #0f1111;
@@ -200,5 +200,6 @@ span{
 }
 
 .shop-section p{
+    padding-bottom: 50px;
     color: #007185;
 }
