--- a/4th Complete Landing Page/style.css
+++ b/4th Complete Landing Page/style.css
@@ -238,3 +238,52 @@ header{
 .mid-feature-container{
     flex-direction: row-reverse;
 }
+
+/* Example section */
+
+.example-header{
+    flex-direction: column;
+    gap: 20px;
+}
+
+.example-area{
+    justify-content: space-between;
+    margin-block: 30px;
+}
+
+.example-card{
+    width: 23%;
+    position: relative;
+    min-height: 300px;
+    background: black;
+    background: linear-gradient(rgb(0, 0, 0, 0.2), rgb(0, 0, 0, 0.8)), url(./assets/asset\ 35.jpeg);
+    background-size: cover;
+    transition: 0.2s ease-out;
+}
+
+.example-card:nth-child(2){
+    background: linear-gradient(rgb(0, 0, 0, 0.2), rgb(0, 0, 0, 0.8)), url(./assets/asset\ 34.jpeg);
+    background-size: cover;
+}
+
+.example-card:nth-child(3){
+    background: linear-gradient(rgb(0, 0, 0, 0.2), rgb(0, 0, 0, 0.8)), url(./assets/asset\ 36.jpeg);
+    background-size: cover;
+}
+
+.example-card:nth-child(4){
+    background: linear-gradient(rgb(0, 0, 0, 0.2), rgb(0, 0, 0, 0.8)), url(./assets/asset\ 37.jpeg);
+    background-size: cover;
+}
+
+.example-card:hover{
+    box-shadow: 15px 0 20px #888;
+}
+
+.card-text{
+    position: absolute;
+    left: 20px;
+    right: 20px;
+    bottom: 20px;
+    color: white;
+}
