--- a/4th Complete Landing Page/style.css
+++ b/4th Complete Landing Page/style.css
@@ -306,3 +306,14 @@ header{
     /* text-align: center; */
     gap: 30px;
 }
+
+/* footer section */
+
+footer{
+    padding-block: 80px;
+    background-color:#ebf2fa;
+}
+
+.footer-container{
+
+}
