Footer section Done

--- a/4th Complete Landing Page/style.css
+++ b/4th Complete Landing Page/style.css
@@ -307,13 +307,20 @@ header{
     gap: 30px;
 }
 
-/* footer section */
+/* Footer section */
 
 footer{
     padding-block: 80px;
-    background-color:#ebf2fa;
+    background-color: #ebf2fa;
+}
+
+.link-column{
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
 }
 
 .footer-container{
-
+    align-items: flex-start;
+    justify-content: space-between;
 }
