Sub-footer Completed

--- a/4th Complete Landing Page/style.css
+++ b/4th Complete Landing Page/style.css
@@ -207,7 +207,7 @@ header{
     flex-wrap: wrap;  
     justify-content: space-between; 
     gap: 20px;
-    margin-top: 20px;
+    margin-top: 40px;
 }
 .features-card{
     flex-direction: column;
@@ -324,3 +324,16 @@ footer{
     align-items: flex-start;
     justify-content: space-between;
 }
+
+/* Sub footer */
+
+.sub-footer{
+    background-color: #b9cde4;
+    padding: var(--padding-inline-section);
+}
+
+.sub-footer-links{
+    justify-content: center;
+    gap: 30px;
+}
+
