--- a/Amazon clone/style.css
+++ b/Amazon clone/style.css
@@ -5,7 +5,7 @@
 }
 
 .navbar{
-    height: 60px;
+    height: 50px;
     background-color: #0f1111;
     color: white;
     display: flex;
@@ -22,7 +22,7 @@
     background-image: url(Assets/amazon_logo.png);
     background-size: cover;
     height: 58px;
-    width: 100%;
+    width: 100vw;
 }
 .border{
     border: 1px solid transparent;
