--- a/2nd Landing Page/style.css
+++ b/2nd Landing Page/style.css
@@ -111,8 +111,8 @@ body {
 }
 
 .content button {
-  font-size: 1.2vw;
-  padding: 1.3vw 2.3vw;
+  font-size: 1.2rem;
+  padding: 1vw 2vw;
   background-color: lightseagreen;
   color: #ffffff;
   border: none;
@@ -120,6 +120,10 @@ body {
   font-weight: 700;
   cursor: pointer;
 }
+
+/* .content button:hover{
+  font-size: 1.3rem;
+} */
 
 .right {
   height: 100%;
